fix style on admin dropdown to make all options visible

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -5694,7 +5694,7 @@ multiselect .dropdown-menu .dropdown-menu-list>li>a i.empty {
 }
 
 multiselect .dropdown-menu .dropdown-menu-list {
-    height: 135px;
+    min-height: 135px;
     min-width: 315px;
     overflow-y: scroll;
 }
